--- a/server/djangoapp/templates/djangoapp/contact.html
+++ b/server/djangoapp/templates/djangoapp/contact.html
@@ -12,11 +12,6 @@
     <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
 
 </head>
-
-    <body>
-    <!-- Remove this line the first time you edit this file
-    This is the index page of your Django app! -->
-    <!--Add a nav bar here -->
     <nav class="navbar navbar-light bg-light">
         <div class="navbar-header">
             <a class="navbar-brand" href="{% url 'djangoapp:index' %}">Home</a>
@@ -28,9 +23,7 @@
             </li>
         </ul>
     </nav>
-
-    <!--Add a dealer table here -->
-
-    </body>
-
+    <h1>
+        Contact us at 123-456-7890. Please email us at info@dealership.com
+    </h1>
 </html>
