--- a/server/djangoapp/templates/djangoapp/dealer_details.html
+++ b/server/djangoapp/templates/djangoapp/dealer_details.html
@@ -13,26 +13,59 @@
     <nav class="navbar navbar-light bg-light">
         <div class="navbar-header">
             <a class="navbar-brand" href="{% url 'djangoapp:index' %}">Home</a>
-        </div>
+            <a class="btn btn-link" href="{% url 'djangoapp:about' %}">About Us</a>
+            <a class="btn btn-link" href="{% url 'djangoapp:contact' %}">Contact Us</a>
+    </div>
+        <ul class="nav navbar-nav navbar-right">
+            {% if user.is_authenticated %}
+            <li>
+                <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
+                <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
+            </li>
+            {% else %}
+            <li>
+                <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                    {% csrf_token %}
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Username" name="username" >
+                        <input type="password" class="form-control" placeholder="Username" name="psw" >
+                        <button class="btn btn-primary" type="submit">Login</button>
+                        <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>
+                    </div>
+                </form>
+            </li>
+            {% endif %}
+        </ul>
     </nav>
 
     <!-- Add reviews as cards -->
+    <h2>Reviews for {{ dealer.full_name }}</h2>
     {% if dealer_review_list %}
-    <div class="container"> <!--Style root div with .container class -->
-        <div class="card-deck"> <!--Style second div with .card-deck class -->
-            {% for review in dealer_review_list %}
-            <div class="card" style="width: 36rem;"> <!--Style third level div with .card class -->
-                <div class="card-body bg-light"> <!--Style root div with .card-body and .bg-light class -->
-                    <h5 class="card-title">{{ review.name }}, <span class="text-success"> <!--Style h5 with .card-title and span with .text-success class -->
-                              {{ review.sentiment }}</span></h5>
-                    <p class="card-text">{{ review.review }}</p> <!--Style card description with .card-text class -->
-                </div>
+    <div class="card-columns mt-3">
+        {% for review in dealer_review_list %}
+        <div class="card">
+            <div class="card-header">
+                <img style="height: 50px" class="card-img-left"
+                    src="/media/emoji/{{ review.sentiment }}.png" />
             </div>
-            {% endfor %}
+            <div class="card-body">
+                <h5 class="card-title">
+                    {{ review.car_make }}, {{ review.car_model }}<br />
+                    {{ review.car_year }}
+                </h5>
+                <p class="card-text">
+                    {{ review.review }}
+                </p>
+            </div>
         </div>
+        {% endfor %}
     </div>
     {% else %}
     <p>No reviews are available.</p>
+    {% endif %}
+
+    {% if user.is_authenticated %}
+    <a href="{% url 'djangoapp:add_review' dealer.id  %}">Add Review</a>
     {% endif %}
     </body>
 
