--- a/server/djangoapp/templates/djangoapp/add_review.html
+++ b/server/djangoapp/templates/djangoapp/add_review.html
@@ -11,6 +11,69 @@
 
 </head>
     <body>
+        <nav class="navbar navbar-light bg-light">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="{% url 'djangoapp:index' %}">Home</a>
+                <a class="btn btn-link" href="{% url 'djangoapp:about' %}">About Us</a>
+                <a class="btn btn-link" href="{% url 'djangoapp:contact' %}">Contact Us</a>
+        </div>
+            <ul class="nav navbar-nav navbar-right">
+                {% if user.is_authenticated %}
+                <li>
+                    <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
+                    <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
+                </li>
+                {% else %}
+                <li>
+                    <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                        {% csrf_token %}
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Username" name="username" >
+                            <input type="password" class="form-control" placeholder="Username" name="psw" >
+                            <button class="btn btn-primary" type="submit">Login</button>
+                            <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>
+                        </div>
+                    </form>
+                </li>
+                {% endif %}
+            </ul>
+        </nav>
+
     <!--Add review form here -->
+    {% if user.is_authenticated %}
+    <div class="container-fluid">
+    <h3>Add a review about {{ dealer.full_name }}</h3>
+    <form action="{% url 'djangoapp:add_review' dealer.id %}" method="post">
+        {% csrf_token %}
+        <label for="content"><b>Enter the review content: </b></label>
+        <textarea class="form-control" id="content" name="content" rows="2" required></textarea><br>
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="purchasecheck" id="purchasecheck">
+            <label for="purchasecheck">Has purchased the car form {{ dealer.full_name }} ?
+                <span class="text-secondary">(select purchased car information below if checked)<span>
+            </label><br>
+        </div>
+        <div class="mb-3">
+            <label for="car"><b>Select your car (model-make-year):</b></label>
+            <select name="car" id="car" class="form-select" required>
+                <option selected value=""></option>
+                {% for car in cars %}
+                <option value="{{ car.id }}">{{car.name}}-{{car.make.name}}-{{ car.year|date:"Y" }}</option>
+                {% endfor %}
+            </select>
+        </div>
+        <div class="mb-3">
+            <label for="purchasedate"><b>Select Your Purchase Date: </b></label>
+            <input class="date-own form-control" style="width: 300px;" type="text" name="purchasedate" id="purchasedate">
+        </div>
+       <button class="btn btn-primary" type="submit">Submit</button>
+    </form>
+    </div>
+    {% endif %}
     </body>
+    <script type="text/javascript">
+        $('.date-own').datepicker({
+           format: 'mm/dd/yyyy'
+         });
+   </script>
 </html>
